CORE-3107 - Added max width to fix wrapping in IE11, also fixed a formatting issue

--- a/css/tiles.less
+++ b/css/tiles.less
@@ -1,5 +1,9 @@
 .mw-bs {
 
+    .mw-tiles {
+        width: 100%;
+    }
+
     .mw-tiles > label {
         font-size: 1.5em;
     }
